57) kernel: usb: xhci: use non-interruptible sleep for XHCI commands.<br>
58) kernel: usb: cdc_ncm: toggle altsetting to force reset before setup, do not call usbnet_link_change from cdc_ncm_bind.<br>
59) kernel: usb: qcserial: add Sierra Wireless EM74xx device ID.<br>
60) kernel: usb: xhci: correct the usage of USB_CTRL_SET_TIMEOUT.<br>
61) kernel: usb: option: add support for SIM7100E.<br>
62) kernel: net: fastpaths: remove old ugli hack and move flags to end of cb (fix compath with new GRO logic).<br>
63) kernel: net: csum: update csum_block_add to use rotate instead of byteswap.<br>
64) kernel: net: ppp: ensure file->private_data can't be overridden.<br>
65) kernel: net: vlan: propagate gso_max_segs.<br>
66) kernel: net: gro: selective flush of packets.<br>
67) kernel: net: gro: fix possible panic in skb_gro_receive().<br>
68) kernel: net: gro: add checksuming helpers.<br>
69) kernel: net: gro: only verify TCP checksums for candidates.<br>
70) kernel: net: gro: clean up tcpX_gro_receive checksum verification.<br>
71) kernel: net: gro: change GRO overflow strategy.<br>
72) kernel: net: ipv4: fix memory leaks in ip_cmsg_send() callers.<br>
73) kernel: net: ipv6: gro: fix IPV6_GRO_CB(skb)->proto problem.<br>
74) kernel: net: netfilter: nf_defrag_ipv4: drop redundant ip_send_check().<br>
75) kernel: net: bridge: update max_gso_segs and max_gso_size.<br>
76) kernel: net: bridge: multicast: notify eth switch on every leave event.<br>
77) kernel: net: mld, igmp: fix reserved tailroom calculation.<br>
78) kernel: sunrpc/cache: fix off-by-one in qword_get().<br>
79) kernel: ubi: fix out of bounds write in volume update code.<br>
80) kernel: libata: align ata_device's id on a cacheline.<br>
<br>
<br>
<b>4.2.x</b><br>
1) kernel: ralink_wifi: add KickStaRssiLowPSM to allow different set SQ for kick PSM clietns (prevent infinitive kick/reuse at some mobile clients).<br>
2) init.d/goahead: add support KickStaRssiLowPSM.<br>
<br>
<br>
<br>